# evoeng

./: README.md  cache_extract.py  ids.json  package_parser.py  setup.cfg  wf_bin_parser.py
evoeng/: cache_extract.py  languages_extract.py  lz77.py  package_parser.py  packages_extract.py
scripts/: extract_all.py  extract_mods.py  extract_warframes.py  packages_extract.py  textures.py
tests/: test_package_parser.py
