[metadata]
name = evoeng
version = 0.1
description = Digital Extremes Evolution Engine tools
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/jleclanche/evoeng
download_url = https://github.com/jleclanche/evoeng/archive/master.zip
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: System

[options]
packages = evoeng
install_requires =
	binreader
	winfiletime
